fix: remove excessive spacing in breakpoint list
Fixes a minor regression introduced in #15953, where the updated `min-height` on the `theia-input` class caused breakpoint list entries to have unnecessary vertical spacing

Contributed on behalf of STMicroelectronics

--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -71,6 +71,10 @@
   border-radius: 2px;
 }
 
+.theia-source-breakpoint > .theia-input {
+  min-height: auto;
+}
+
 .theia-debug-session .status,
 .theia-debug-thread .status {
   text-transform: uppercase;
